--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@ Jawa Barat 40559
                     </div>
                 </form>
                 <footer class="tm-copyright tm-text-small">
-                    Copyright 2021 Vertex Company 
+                    Copyright 2024 A. Febrizan Rizaldy 
                     
-                    - Design: <a rel="nofollow" href="https://www.tooplate.com" class="tm-text-link" target="_parent">Tooplate</a>
+                    - 221364033 <a rel="nofollow" href="https://www.tooplate.com" class="tm-text-link" target="_parent"></a>
                 </footer>              
             </div>
             
